--- a/test_front/src/app/app.component.html
+++ b/test_front/src/app/app.component.html
@@ -1,2 +1,7 @@
-<app-file-upload></app-file-upload>
+<div class="menu">
+    <ul>
+        <li><a routerLink="/file-upload" routerLinkActive="active" class="menu-item">Bands</a></li>
+        <li><a routerLink="/concert-hall" routerLinkActive="active" class="menu-item">Concerts</a></li>
+    </ul>
+</div>
 <router-outlet />
